--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="Jullian Yapeter" content="">
 	<meta name="description" content="Jullian Arta Yapeter"/>
+	<link rel="icon" href="img/JAY LOGO 2.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-thumbs.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-buttons.css">
