--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<h2>My Passion</h2>
 				<p>With an immense entrepreneurial spirit, I thrive on new ideas. Identifying the issues in our society
 				and in our physical world, and delivering innovative user-centric solutions is what I uniquely bring to
-				the table at every company I work in. Outside of class, I enjoy travelling, playing sports, and the culinary arts"</p>
+				the table at every company I work in. Outside of class, I enjoy travelling, playing sports, and the culinary arts.</p>
 			</li>
 		</ul>
 	</section><!--  End services  -->
