--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jullian Yapeter's Personal Webiste</title>
+	<title>I'm Jullian Yapeter</title>
 	<meta charset="utf-8">
 	<meta name="Jullian Yapeter" content="">
 	<meta name="description" content="Jullian Arta Yapeter"/>
