Change meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>I'm Jullian Yapeter</title>
 	<meta charset="utf-8">
 	<meta name="Jullian Yapeter" content="">
-	<meta name="description" content="Jullian Arta Yapeter"/>
+	<meta name="description" content="Jullian Arta Yapeter Waterloo Mechatronics Engineer Co-op"/>
 	<link rel="icon" href="img/JAY LOGO 2.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-thumbs.css">
