fix padding on first heading

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 	<section class="services wrapper">
 		<div class="title animated wow fadeIn">
+			<p style="padding: 0 7em 6em 0;"></p>
 			<h2 id=about_me> About Me</h2>
 			<h3>In a nutshell</h3>
 			<hr class="separator"/>
@@ -88,7 +89,7 @@
 	<section class="testimonials wrapper">
 		<div class="title animated wow fadeIn">
 			<h2 id=references>References</h2>
-			<h3>How others describe me.</h3>
+			<h3>How others describe me</h3>
 			<hr class="separator"/>
 		</div>
 
