Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116687393-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-116687393-1');
+</script>
+
 	<title>I'm Jullian Yapeter</title>
 	<meta charset="utf-8">
 	<meta name="Jullian Yapeter" content="">
-	<meta name="description" content="Jullian Arta Yapeter Waterloo Mechatronics Engineer Co-op"/>
+	<meta name="description" content="Jullian Arta Yapeter, Waterloo Mechatronics Engineer Co-op"/>
 	<link rel="icon" href="img/JAY LOGO 2.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-thumbs.css">
