--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ you can hand him any task and he’ll exceed all expectations.
 							<span class="day">10</span>
 							<span class="month">Jan</span>
 						</div>-->
-						<a href="Jullian_Arta_Yapeter_3A/index1.html">
+						<a href="Jullian Yapeter Resume 3A7z.html">
 							<img src="img/resume_icon.png" alt=""/>
 						</a>
 					</div>
