--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ you can hand him any task and he’ll exceed all expectations.
 							<span class="day">10</span>
 							<span class="month">Jan</span>
 						</div>-->
-						<a href="Jullian Yapeter Resume 3A7z.html">
+						<a href="Jullian_Yapeter_Resume_V27/6bf00e86-ec46-11e9-9d71-0cc47a792c0a_id_6bf00e86-ec46-11e9-9d71-0cc47a792c0a.html">
 							<img src="img/resume_icon.png" alt=""/>
 						</a>
 					</div>
