Updated featured recommendations

--- a/index.html
+++ b/index.html
@@ -104,26 +104,27 @@
 
 		<ul class="clearfix">
 			<li class="animated wow fadeInDown">
-				<p><img src="img/quotes.png" alt="" class="quotes"/>Jullian was filled with passion to learn and contribute. His passion to learn accelerated his learning and adaptation to the professional work environment. He is very collaborative and brings energy to the team while performing at his optimal capabilities. Jullian is always searching for more challenging problems to solve and finds joy in successfully addressing them.
+				<p><img src="img/quotes.png" alt="" class="quotes"/>Jullian was an outstanding worker, who regularly sought and came up with innovative solutions to complex problems. When needed, he would seek out and learn new disciplines on his own to solve these problems, including teaching himself areas of deep learning for which there were no in-house experts to mentor him.
+Jullian also showed exceptional initiative by indentifying areas of need, proposing new project ideas, and executing on them. Jullian was a fantastic intern, one of the best I've had. He learned how to use our internal system very quickly, and began making improvements to it almost immediately.
 				<span class="triangle"></span>
 				</p>
 				<div class="client">
 					<!-- <img src="img/client1.jpg" class="avatar"/> -->
 					<div class="client_details">
-						<h4>Brian Jeong</h4>
-						<h5>Senior Colleague at Taymer International Inc.</h5>
+						<h4>Jeremie Papon</h4>
+						<h5>Principal R&D Imagineer @ Disney Research</h5>
 					</div>
 				</div>
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".2s">
-				<p><img src="img/quotes.png" alt="" class="quotes"/>The quality of work he delivered to the company was outstanding. During the term, Mr. Yapeter has produced large volume of work, including development of algorithms, performing literature review, software development and testing and data processing. He has shown a great ability in solving algorithm development and software coding challenges. During his work at AUG, Mr. Yapeter has been very dependable, even when the deadlines were very tight. He was a valuable asset to the team by accommodating team’s needs. Mr. Yapeter has shown excellent written and oral communication skills on every occasion available.
+				<p><img src="img/quotes.png" alt="" class="quotes"/>Jullian is the kind of person that looks at a massive task with an impossible deadline and smiles. I came to understand that he smiles because he knows he can get it done and may have already worked out a possible approach vector. It was a pleasure to work with Jullian in the past 4 months at IBM where he worked on and delivered leading-edge projects with minimal prior expertise, prior documentation, and minimal guidance. For the project that I managed, Julllian demonstrated excellent capabilities in machine learning, visual recognition, robotics, and software development. Whenever Jullian is challenged to think bigger and broader, he rises to the challenge and adds his own bit of detail/insight to exceed expectations. In addition to having a strong drive to learn and explore, he takes full ownership of tasks (which has sometimes involved working into the AM) and remains committed well beyond the critical point to ensure maintainability and growth of the project. I would absolutely recommend Jullian to anyone that may be considering him.
 				<span class="triangle"></span>
 				</p>
 				<div class="client">
 					<!-- <img src="img/client2.jpg" class="avatar"/> -->
 					<div class="client_details">
-						<h4>Abhijit Sinha, PhD.</h4>
-						<h5>Manager of Emerging Technologies at A.U.G. Signals</h5>
+						<h4>Brananvan Selvasingham</h4>
+						<h5>Watson IoT+AI Architect @ IBM</h5>
 					</div>
 				</div>
 			</li>
@@ -141,7 +142,7 @@ you can hand him any task and he’ll exceed all expectations.
 					<!-- <img src="img/client3.jpg" class="avatar"/> -->
 					<div class="client_details">
 						<h4>Dylan Ng</h4>
-						<h5>Prototype Technical Director at GM 2908 Innovation Lab</h5>
+						<h5>Prototype Technical Director @ GM 2908 Innovation Lab</h5>
 					</div>
 				</div>
 			</li>
