new resume and updated to graduate

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 				<img class="icon" src="img/waterloo_icon.jpg"  width="200" height="200" alt=""/>
 				<span class="separator"></span>
 				<h2>My Education</h2>
-				<p>Third-year Mechatronics Engineering student at the University of Waterloo. Well-versed
-				in software & hardware development, and mechanical design. Academically, top 10 in my class.</p>
+				<p>Mechatronics Engineering graduate from the University of Waterloo. Well-versed
+                in software & hardware development, and mechanical design. Graduated on the Dean's Honours List.
+                Currently pursuing an M.S. in Computer Science at the University of Southern California.</p>
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".2s">
 				<img class="icon" src="img/mechatronics_icon.jpeg" width="200" height="200" alt=""/>
@@ -210,7 +211,7 @@ you can hand him any task and he’ll exceed all expectations.
 							<span class="day">10</span>
 							<span class="month">Jan</span>
 						</div>-->
-						<a href="jullian_yapeter_resume.html">
+						<a href="jullian_yapeter_resume.html/Jullian_Yapeter_Resume.html">
 							<img src="img/resume_icon.png" alt=""/>
 						</a>
 					</div>
