--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ you can hand him any task and he’ll exceed all expectations.
 							<span class="day">10</span>
 							<span class="month">Jan</span>
 						</div>-->
-						<a href="jullian_yapeter_resume.html/Jullian_Yapeter_Resume.html">
+						<a href="Jullian_Yapeter_Resume.html/Jullian_Yapeter_Resume.html">
 							<img src="img/resume_icon.png" alt=""/>
 						</a>
 					</div>
